deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: badge-service
  namespace: tools
  labels:
    app: badge
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: badge
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badge-deploy
  namespace: tools
spec:
  selector:
    matchLabels:
      app: badge
  replicas: 1
  template:
    metadata:
      labels:
        app: badge
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: badge
        image: sybex/badgeservice:1.2.${DRONE_BUILD_NUMBER}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 10Mi
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - mountPath: /app/db
          name: badge-data
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 2
          timeoutSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 10
      volumes:
      - name: badge-data
        persistentVolumeClaim:
          claimName: badge-pvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: badge-ingress
  namespace: tools
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - badge.julina.ch
    secretName: tls-badge-ingress
  rules:
  - host: badge.julina.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: badge-service
          servicePort: 5000
